--- a/sass/pages/explore.module.scss
+++ b/sass/pages/explore.module.scss
@@ -11,7 +11,7 @@
       [col-start] minmax(17.5rem, min-content) [col-end]
     )
     [center-end] 1fr [full-end];
-  grid-template-rows: 8.5vh 100vh min-content min-content;
+  grid-template-rows: 9vh 100vh min-content min-content;
 
   &--nav {
     grid-column: full-start / full-end;
