--- a/sass/pages/home.module.scss
+++ b/sass/pages/home.module.scss
@@ -11,7 +11,7 @@
       [col-start] minmax(16rem, min-content) [col-end]
     )
     [center-end] 1fr [full-end];
-  grid-template-rows: 8.5vh 100vh 30vh repeat(3, max-content) 60vh 65vh min-content;
+  grid-template-rows: 9vh 100vh 30vh repeat(3, max-content) 60vh 65vh min-content;
 
   &--nav {
     grid-column: full-start / full-end;
